--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:e9ptsIJTRyA=,iv:ZAF5XCqkHG7cCxcjgy23fUAZt6v7YCHZwdjehaJuw6E=,tag:wCxGudcCDQasAaUPku4eog==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:I76r6Vg7JdE=,iv:2WfFahNLPBEe7v8KR9bUVWQXowLn5wkwy7KOvOdpn/A=,tag:KNCiNON9qc+tLgfxTeUUIQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoaUxZcjV0V1Z6dWV1SVI3
-            bTQvOUU5U1VMQ2c2MGpsWTdJKzJ0TmJZQjA4CnN0cExweHYwZ1Q0Zi9pTkZ4eTk3
-            Zmg2WVRCZGVKc04rSkNGWjc5N1lUbHMKLS0tICt6VTVMNzY4RDVrMDhsdThZLy8w
-            RmFwTFAxSTloT3VXWGZzT0J3aUlFWG8KzSIZn9E2+WgfvoDNqKCGUei8HU635K+w
-            Bkm296ZD56h3txtXKcw7dBnvFJ9h1SBvSZq7vxpp1YszW5Jbhbz05g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiN1hZREJ0ZjM4M09qMGNa
+            aDNtdGhscnE0T2R2bGhUTmNjTFNvR0xlMHpNCmNJVkZ2dXgyNGI3QVNKbFVzSUtv
+            YlFrYkY1WmJoRzNvU1pxOVVtYm1keVEKLS0tIDJlS0VuajlCZHFTVFNYeUFLK25W
+            clRWT2tOWjRkSFBHY3hhemgwaVNCUGcKLJFE3CIXlbRIjqy5OBxfkIDg1rn5Qb45
+            0zA0dqlhQpwtGZ1hpCTj2Bm+acrigAlfONSfVeN1loT7HuhixyCGaA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:05:14Z"
-    mac: ENC[AES256_GCM,data:ch05bsWekOnoxS1XTk4ZsWHoqKifDp5ctT+zHwCrNde0s7LAup9qfZ8Riv58jUIlMHtGSqBV1E/v4yO6JSSUSkSOmdDL/FUmGjdZHwnaqV699ZXWyc6Lgd8vyphqFfwKmPH0zbAm3J+XcrQxci86ZVBVv5tjEU7C8/MIPup4gZ8=,iv:AjKXpKAnx2sZAwxESD445hmmrtnGkTed3p3gOvzvENQ=,tag:s+B3o9Uupi5ZAecZiXaolw==,type:str]
+    lastmodified: "2023-10-09T01:19:41Z"
+    mac: ENC[AES256_GCM,data:GiRbEfqooaJD9jDfX6AETaaE50PMPOVDLLC+w0fKKr2MEDHeWp4XvqScL4L/fSM+wEJes2Fw2fm92sNu7hm2xmXk9SMhb95506x0TjQfUR4DKzipXVHIYP4mchT/nrLELfI1oHDhGryEhlaI3JC3Jk0VQV7F/S0Hh7L+LazXvzI=,iv:KPGuzsl/T7/wQpArrLxthSeRz40+U1PTPBEbo7SkIWs=,tag:24UMbYj17PoKd5ZGGtFW2g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
