--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:CwkWrP5PIsA=,iv:i6qZwGHjjI+gvZyfdJl2Je22eKv4YTlB9sdec9/xrtY=,tag:11omuIqolLzuZhaY8sgMfg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:rYJCGbzXB4M=,iv:8ICiDIiG943bxzjQkYJ05P8992mrsl9SEAMXBU/KYk8=,tag:nNhxg33/e7PQ9GOuJfYp+g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPWmxTRHdsQS9vSzc3ZTlK
-            OUVVR0JwTkpMSUc3TUtIQ0hiQnhlNktkTlhvCkdoS3NRRmtKbHM2VlpxaVR0b2Rj
-            UnpzOVV6dEw0Tk13d0lsTkxhY2RPMHcKLS0tIHlhSjVqZXZzMEpiRXhKM0dMTUhR
-            WlhlTi9jU1pIMlYzMFNUMUxVSW1ZbFkKQ3FpkAWE+pd7iQyffJj/ttX1Mv2L9ZpV
-            ampBLFba9aNT8rLXT9zXahv1jAXo5E6EYw42SSKkZiqTjIdiu1TpOw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvUzdRNHVZNGxJc1BPTmhE
+            N1ZiM3VXVVFJZ3BXbWMzNGtvQkx0V2JWS3hnCnZWbUIxTUVKS3pVRzlINWVZdTVa
+            aXhFYzZnY3VPeXFEdU1tZENuVTdVa1kKLS0tIHdkS1ZIRkNhT2VWMUZIM3VUTitL
+            alRzc3FodFpxa0kyb3ZGVTBwaTdTK0UKpNLDjmlurleDA9zygBf7S8HtC3WIseGn
+            GcFfFw4TpQO39FsSV0LNALqNlccDl+L9M8kDzLVkc68lgwaMVSVneA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:05:14Z"
-    mac: ENC[AES256_GCM,data:uepv9yvD7GWNG2SuKL1Vm67W+xhDSxn275MSOAYGOP50BFY0KVvMgo0JELcofSRX5Kc8MWNQDTdeinKSYQ1G0SLrNI/Ex/6nr61oeIQezEnJmsCFReFpC3HAalixVbi3YG5VYmErIxumLScHmA8GRdjOQ4OOHUkP4UZaS4ac20I=,iv:t0WkssmzZi7yOp9OyTo4JTZluVFkeqrW16Ij64l0gk4=,tag:Fi93i7l7pMHQFtiQmy0KdQ==,type:str]
+    lastmodified: "2023-10-09T01:19:42Z"
+    mac: ENC[AES256_GCM,data:nKmoWr1d+d41HAvR5NSBQ8270NCD80ODXgAFAy6Hdu/UBcacPA17fXxDhKFmVp8Mo+tJXSNQxyy/uSYDNs8vf8IhQCvZR5N1ibQ2XQZ3x3sfrDrZBVrDQjB0JuhDWukDgfFuWlwmFKv09V3o1/ndPPA71vX3GUNAp0x9lxqGE5U=,iv:tCgvAmrktlAllvHgPSmTewyQ4fJorDxmUBVqUKlId+0=,tag:kk+Qot643EC4A/uSF/ANpA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
