--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:Y52Ft7uZJ2Rp+zrni5c25wtniu2TvMuDbN6r6oCQJeaaPoR6DaQ5LoBrF+OIkSu7lbteeWVvEa9WHXUZ,iv:iVpup7BB6AKRlCKefABMELwxU2zqKWnCwc9hoYuyZGs=,tag:eNqEYGT/Xtbwle9CZB4TCQ==,type:str]
-    username: ENC[AES256_GCM,data:HLaTYaU=,iv:Y1gO0VWo0ceG8fOo8FULz3BtJdTy638KYHLcbY2X8tw=,tag:0W69Jq6eDqs9ySMsg9Y15Q==,type:str]
+    password: ENC[AES256_GCM,data:7iKQuajS9lGPC15OJ0utf5Jktjwa/moiJ5ZuVEO+SaJ+uK+qAHa9Rj87WjwogwmNvNUjBUQ6oicSuodO,iv:IDz9AReexbUb14rL+BIrKUOAzOiN1+TJGo1TVPnadq4=,tag:OPsJF4kPvpIV1yQ5joYhjw==,type:str]
+    username: ENC[AES256_GCM,data:F+IAJzY=,iv:2eyDJ7UiabxYCfm4ZtU79rf6CLVzccFLAK/TQ1k97m0=,tag:+2nRit2gaNCM3+57WTDpdw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAybkZlbWhKUFBWMTlzR21y
-            a0xZSXJjRVlsSkIxdE8rcE1OUlB2eGdxVmxrCmx3Vk9RQ2NGc0JkaDVmaklZbE5S
-            WGg2K2tDWG9Qb09jbHROcGpYU2Y2aWsKLS0tIHdmU1lBaGE1dU52NmVlZ013NGdQ
-            b0N0TU5EeGhSaXoxZUhPdjR0WWhsTkUKPB2lBX7ZJ9FAvv1Xb6JSHHmvSzHY8Z6i
-            m4mCspxybwz9LHxspuWQgC/xkkNgNnD9A3M4zrBeV6UbdMTQoDKG0w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWYwZDRRdnFtdDZhSkFM
+            cUJOdGpYUVFiVkJtTmxYTStZYmVWVHdTZHl3Ck5sUlZlZ3R1TVFQUU9Ib3JReWNP
+            ZE1VYnR3RmpNbFlmNFZ5YW1tYjNiWmMKLS0tIGNvb3k2eWZ2WU9IbzhQMXFSb1pZ
+            My9MN2g5NmZQUUNaUkI1MWd1WllmOG8KzYZh8vEmy2AnYcBkIupKcmbP7XGsoGWu
+            ZkGqXw5V1GCX2V2o8GaimyBW0bo9F7lqvBw1uC7z1p9Uc4hvd0IpQQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:06:55Z"
-    mac: ENC[AES256_GCM,data:f8C2gQetjCuqrymgi1XMu2liGthZqMnMqQxtHtL+cqGWaQJCaqJNPtUNrJWXnWVFToi5fOCCJRkFNPVqxHyhs/RqKjO+vEScrvpeaUlDEE1lOXKl0j0/TxVtDNWQ3S14dqclcTSbJz8W5PEVvLT/pBwt4urgIQiEa5SyGFDCrJc=,iv:zfMz/YNVZ+ascdQU6WyZ+JP2jx4y4Hhv/lz57WdK8cw=,tag:DO1QS97SvBBZWQEX86K/Mg==,type:str]
+    lastmodified: "2023-10-09T01:21:25Z"
+    mac: ENC[AES256_GCM,data:b+Waup2p0iP6uKVjT/HfKuM4Y1nW6xgpR+nFVduzhSl6VR+vMe8IBUUMzPaNVTj1svy303c5xkeZ0gXwdv06L4qTQBcq68r0ugPb57yVPdnWWSbhBSw77EaimMOtsGQB0zkQ9+Rgyiref+Cg9Fz35uO/kRN0Zd3RuhI8ymIuaBo=,iv:hFbQ48go3c1qAlgJtteQFEHCIfWg4ggbg7I9d1WbGAg=,tag:NuZawxj8PbG/etdgxH2dRQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
