--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:8HOeEsohzgc=,iv:O2v69PR8Ak/5i3qfcgXlB0x1QC3RhN6kdVUBuj8yUqU=,tag:mApo7ShSpHHvDXRgNgvl3w==,type:str]
-    admin-user: ENC[AES256_GCM,data:NY9Waek=,iv:osmTE52bn37FasRmzQuL0BdpCe1y93HflVjOZ4PFNO4=,tag:eNmhZnXsFcIu1THmmOAcvQ==,type:str]
+    admin-password: ENC[AES256_GCM,data:ZKXl2iGEiXI=,iv:OMljPtfx4G5KK/l0eNkCk2iM3M86IWJhjuO91urS0fc=,tag:tAfr7MyqTWQIaWuVlYQPvg==,type:str]
+    admin-user: ENC[AES256_GCM,data:0InGeos=,iv:wYklagThcU18fDnsonUZ2DRxXq4khc2NN06o0MdSHMU=,tag:pWve7lPL4trTXjjWKvx2Kg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBISmViRVE3bHdUUTIwUE1v
-            YVpmaXYvQ3ZmRFFFbHl1aE9QWDEyZ0JZcUhRCmVhSUJnVGN2SUYvbDg0bEpyM0Fh
-            Y28wYWJ2a055enl0SjEvcTVpb253SGMKLS0tIDdWanB6UGtEeEw3VmZ5MXdLcEhG
-            Ulc2RzIvRDhNQnl6Mi9vSTIvU3lHU1kKc36I8VHxnfmqhVZ0oqZQEHewsHkqMDi5
-            VAekTWd0yi6smo4avcmkeSGjxuuh7GoqKR+tJuLXStxeOR9+/TDDtQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUE5FOW5VRlBaVGlhcmRu
+            bHZ2TDhWbGRLdngxU3VkcFhOSC8xREpsNWxBCnVzVGZwb1dvcDNoaG9vRFRLbFdt
+            SHl5b2toSWgzdzh4WkpBSCsvcGVzRmsKLS0tIHJ5dVVFTHNFb01Sa2VjVmk1R0RF
+            ZmYyR2h2bjZVZ3o4aXNzbmxTeEtDTGsKlaRo7WcNDD0b8kCLT7IDS3BqeUXJkMUw
+            OveA2OJar5BStFblp1mp7j51nASVxzTGik6N3OrF7lXzso4aJHqFeA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:06:40Z"
-    mac: ENC[AES256_GCM,data:iyRyDXcOFMuxCUixn8bpqBKIlgcrY6rJORLLRuC5y9q8ILeewqtNKnk8xdQH4FU1y2/vhpPs47NDXuUfATCSHWs/JAPOTyq9yboVUB/n2ncAk3djyFY5DZrB0MOd4dlD3pWUAAyoqkjvbJXNC3oOYlQqkZ9rYvzJ9PKFT/OzFBY=,iv:DqMKjLMeGdBHHsyvi7pKwmrfmOP/xLYNtCIcWrDhit8=,tag:I4YqMcCn6Xpll2d+ZPzxgw==,type:str]
+    lastmodified: "2023-10-09T01:21:11Z"
+    mac: ENC[AES256_GCM,data:TW/lVxAP/S7s8oKd/TJNpM9mmeubeSV/Qssr6RKoj2DZ6NeTkWJWzf2x5xEziiT/2kSQpagJ/01Wdx4nqJU1ZuTCUorgWWTXGXttW8uAiDbFwAy3xdJ5aiwcyD717OMNNp+qALgMF6ajysmRUQlaaxGhZHz3is7mTTnqOIN89GY=,iv:2DBOx7WFxEBwRrjokxqt+E0LIvdz8+jVNhn2PoewBcU=,tag:8YXIn4CTuOTZ54fChRa+dg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
