--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:ruMCdNPC5/n6xkTSQZip3A==,iv:7NC3AzjDwoRDvmcSk8Re4L/Y5BuKZgG9uUlNvbPgM/U=,tag:mBeDgTO/m0xtFkt7tA48pA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:T3MXmT95RxUzAvjm/du3fZ2r6rvoWI2wTb/aT0L5YrDMq0oC,iv:SyEskupq2Q8UJer6Al5MPS9h5oo3cQCqN8e3+LLjMy4=,tag:ALrzJsLhyF7DGQxeq04c7Q==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:M+oO1WOx1kA7No4=,iv:z3BCHjow5TRKMYSEOFV57w8wALqODDgtnzpH36lfLKc=,tag:lAwtcTnh6AFu2e3LcBrzRQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:QjMQfY6tRSEWbaNC4Y+h3A==,iv:MParCy1Zl5a0EOZqfXVHDsjJlITpMcBRwUCBiBKjxUo=,tag:05chKUA0bjApb2BUTKK8NA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:5JHbwG26p8pjPZKFFPWx3QMx5KTf8wARm4W+A76Ie9BMo2sR,iv:r0gV1VCszTBJqn6g+bC26ljM6qFmQXEBIYWWuevj65E=,tag:OdWzuuNzU60MuTpz+3osiQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:k9pnIvQC2gWA1MI=,iv:BksPuEjQCeTKUIU88P8GKm6jFy/gtAIenZ4czgQugEg=,tag:eDh0+4BVm0YUT/RJ/bZjLg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqZ2IxcWFFUnJtUGwyMUNY
-            TWc2VUZZcUNYVXEvMTM5SEI3L24vQUcvQ2lvCjhUVlAwM2JPVndCNFRnamVaekUr
-            TWdRM3ZydzNHY3l2bnlKT1hxcFVvUUkKLS0tIDZDNmI1MVBTelRmazZubzNWSllr
-            eDZ0ZElkQWo0VlRmRWJCWlFWRGZ0dVEK6wPn1p+dFCapqdI3w1iFGsbNr8jbu5Wj
-            dyOzh7I+qiR6hzUBgc1QzCbYgb7bYnzUVBWqhrJCpnrwxuda5qunlg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwaEh6aTFsdTZmMzVHd2Ja
+            d2R4d0xuNU14U2lrUzgyNUlSbzZGMGRVSEU0Cko3SldPb21QVStFWmtjbzRwTllR
+            eGoyUldWWlFsR2w3SmlTT3VCWFZkUFkKLS0tIFpYS0VRQzN5UzIvSDJsaGdOdnR3
+            cUdYUjExdzBTdCtzSW5pUWZXZVNDWlkKLpE4UxZ8S2hYYOKcJBl7cIBxiw13DIHl
+            Fwp+Vn1Qi89XsilJy7NWqN3jk90UYVffdFEwVuFHejwo33N+yRqOkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:06:34Z"
-    mac: ENC[AES256_GCM,data:+g93a56zdnzWM5prjOyy8r8/EQgS6oBz3btHjXacpvhyTtch6rsOF54Lr4FFDuXXb0fy/KLd/4s4cxiGk8uRKfPi+ektPB0ShXejOHb+3WA2yINwmTMty1rV1i7PXbYpfoKF9HjX+EG6cxunysk766cyVDxFJU8AjPpqN/z1AMA=,iv:K2Dp7IYBbDMBGHGIHEs+0c4shmkQPd81hJ+0YcdUEmA=,tag:ENNf1mzdiVRcAeHqx90N5A==,type:str]
+    lastmodified: "2023-10-09T01:21:04Z"
+    mac: ENC[AES256_GCM,data:JaNJA6QgOxA6bjJObltJHl+6orF9kuq8PB7dSum5v+Tfxyj6V7eFSK7+pebTw5x43GWYw16J1wqDrIVHv1CGWgOoEy4uDfN/YE0iDnEVoxqxLP9OgL2TLaym1xAPVAXW/qdyIyWhLrv4X/PXcm1ikXS+K6o4orxXhAJKXKWOpVM=,iv:XaCW3wB0beUzjU2aQtihPloD8j3+rLptCH7f3Ig4mr4=,tag:+KXG5iiyVjhT7MES2ll9EQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
