--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:EXrTL76jyjc=,iv:N2CjxNoqzLk26jUA3s378/gbBrVhqDCNUaDpgfKCykw=,tag:/i35tSlz/fpX/0ZeEXtDEg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:7ZWIfV4Mvi8=,iv:k6wMXxu+ip/g6L8ReswoV5ZtzlOAnGF2913WmDXrJHQ=,tag:1bOmqzYQm0SX2sQXRvHBqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrZ2FVQ3p4dXRUcWFmMmpY
-            ZTVmYXo5eitodGZINFVKRXBrS0xnVzU2NlE4CmV3eW5Kcm1KVGFScVMwclJPZXlZ
-            T0FhZGVOTGx6WDVDcnA5NWsxSWMyUEEKLS0tIFA2SUJXc1p1MmJxRHZCQ1ZJbWZ2
-            OXpoUGYyelFCYmJtNzdSNXRZM0dFdGcKIB0Kis6eVgmn07LIPpb9q4lxnGNXq08o
-            wSzYB8PBylDTBajDrUs8zi//1DbAgyCyi15WDt9l7WMEdB7SjOrrtw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpUitiWjJROW5Eb0o1Zmpl
+            UTc1UjJtUjA2aGZUc3huTEU0Q2N4UXVvY3l3CjVPWVMvaitSbFBmSHVVeHhtK20r
+            STBSTURBS1VsVUlqSzNuVk9Zc0M1TUkKLS0tIDlwZVRmdzRsY1BYZEdkVDkxQnNI
+            M1laeFd3Z1RGYmk4VThJZDluSG5sNE0KE8aHUNvZxaZEtajKynnVSnwNwDuktXIc
+            KjdTHph/GInmpcXCPwHDZ+HRoIsFCaFYXviLak2r0VBhEMz48Z/b/w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:05:14Z"
-    mac: ENC[AES256_GCM,data:Yl+yZPApI5/lWt/d/AYzdEMLrraMJewTfgbhkGcUzPYHN9K7zbQGZPw4UrI8gwPxxlacvZNw8dG+YHSSqCtwOjAi+JHkPkdx0B+FyEqC/g8V5tvTkbyAo/A0GpG50mnYXf3VLZwxP6RJyPQAp+tNVCWAafx7fCuIsOlH6rWEyFg=,iv:8oNuO5ifdEHZ4Yp8NDhK6u6u4giUit3EneTFpuO7CYE=,tag:Q8Ll8IdKhfD4pePLfGbSTQ==,type:str]
+    lastmodified: "2023-10-09T01:19:42Z"
+    mac: ENC[AES256_GCM,data:kRjN5u0XZLw6fUGnma5FR2Bg0s3bDpiY27PpCOlmL0G49dob0dYQN+GoA5hX0lyTRdKmhJM5xeLGa8r0Nx9wT6W2JpftLdfQEx297WhcZciAXDQSvVcXmlBzaLssxrbSkci6WW2ExUltxZ8JUoytGfN5mnMGje0kGcl0JQ6Lk10=,iv:3O5/jR4tH+Ix35UKjBdGc1RnTiJIX9L8jNMo1Rjj1eI=,tag:kfwxdqNnpEv/WGb2UlA0vQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
