--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:dnntiZuZ0Kj1AAGI,iv:/OkUJ7tgqf02EF9FQ00ZhTqVF5ENNJ2uXqFHakAUnhI=,tag:srwSp0LXddYd+Xfkd6sRvw==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:KhOYLC1Tgijokrxk,iv:fHAUTLN4BKcld08GUls5/Jvrrphtz+Is21q8XV63Qcw=,tag:4LWgFP+G7t+V+9PoD7R/BQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwQmxDZmFuUS9NOXVrT1Zx
-            M084SkxJWjk2cGMrOC9makFuSjBUdVJ4WnpZCms2bGwxSjYvb1VoYjRKOFUycDJh
-            WE1kODlXTXR4bXFramkyTDd6ekpxNW8KLS0tIGtiOVcrdGRQZTd0dSswNnVaUkto
-            YWtrZ01aYWlZMW1pN2lKem5lZXk2dFkK95t0J/jfY4dMmoYVm9v4KBPB425UKBQN
-            adEHrTxf0ZW6mIzJRR7sY1sQgkn9EmAaAOUupteEzb3m2pH7zvzR2A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxWVk3dnpENC8rVHdQaVBV
+            R2dHUndVMnAyeEFzVmpQSEkzTHdXY1VOVGlRCkdOYzhQc2g2K204UE5jRWd4ci9i
+            YmdDYWIxQks3V1hwYnFQWTFoYW9FaTQKLS0tIFZFS0l3M0VsQU15WDhuRlR6aElp
+            dk5GaW5ydWdmSVdsSVArUzR6M1Y1TXMK8OMWpQLp6udVfrnV630YPezZyiPT4KER
+            YiLmETtn3pCFbR6xYPpfBf8FinYpyCZUtLvPRYg5CoqAadmC2h4S9A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:06:34Z"
-    mac: ENC[AES256_GCM,data:6ORr+5ZVmv9C6bH1z7uiJz9YAfHk9SU58Fs835E4izvpIprLQGOTJQssv6UNH3DXlebUq+JzIFql+dpaf4KZ8oqE+FTqGLyDU8jFUGGehS/AYqqRFf/EMVADaVNC7eKAm1gUKb54iARgPZePyXgetyiYmtaL46Gstwu1TQ1RyOE=,iv:+0wvoMdLycXSJL2InXVwOgh0iA9TRAON0GP+dISEKto=,tag:8hywuhLsfKF0Q13laTaaYw==,type:str]
+    lastmodified: "2023-10-09T01:21:04Z"
+    mac: ENC[AES256_GCM,data:YeCYRdmrW4Ad7AvT/lCDRpARHnm/W+RRdMvWewrZr1TvE1pBSrhlHo/Nn2RThsq+eaVRTtHgBpsFPJvJ8HIzE969LUizw7UYFFXVLRgtYfiWGxs9o5yFyJjChIFaSPmksgm9VvQPK6vXAm8r6c1Y7TZAWaJdubKWCGY1ZRM9K6w=,iv:ALz6fS4n7/h41KfwDpYWCLzrO7uMB60CtgC2wAiVy/Q=,tag:5mUUSCG9FqRtMTw621cfXA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
