--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:rYJCGbzXB4M=,iv:8ICiDIiG943bxzjQkYJ05P8992mrsl9SEAMXBU/KYk8=,tag:nNhxg33/e7PQ9GOuJfYp+g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:CQcH/VzMl5w=,iv:+Y0DpsPQHXDmubh/Lx7gEZBI9K1HdN37xk/4IbYIllw=,tag:V6JjzOvr7Y5EwZhDkADA1Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvUzdRNHVZNGxJc1BPTmhE
-            N1ZiM3VXVVFJZ3BXbWMzNGtvQkx0V2JWS3hnCnZWbUIxTUVKS3pVRzlINWVZdTVa
-            aXhFYzZnY3VPeXFEdU1tZENuVTdVa1kKLS0tIHdkS1ZIRkNhT2VWMUZIM3VUTitL
-            alRzc3FodFpxa0kyb3ZGVTBwaTdTK0UKpNLDjmlurleDA9zygBf7S8HtC3WIseGn
-            GcFfFw4TpQO39FsSV0LNALqNlccDl+L9M8kDzLVkc68lgwaMVSVneA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S1FVWFN5K250TytYZFBz
+            c2o2cENGeFNaNTZPcWpPMUYwVDF2ODY1RkJzCmtCZEpqSVo2YXdMakIvUTUwekdT
+            Q29pZXdWTENJZTR2VGVsOEptc1pNd0EKLS0tIFdsU2dNN2ZyWXV2QkZiM0ZSb3Ur
+            S0luM2VEaktFRGZ4bithVW8zeGQ1aEkKPZnFw1aFc+7NAf+bMpFk9ggSUXumY0D+
+            To8FISqwCo1Tbp+g++XQn2NmXgeNubBuO2Ii6f2epIYxVPLdQEKKkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:19:42Z"
-    mac: ENC[AES256_GCM,data:nKmoWr1d+d41HAvR5NSBQ8270NCD80ODXgAFAy6Hdu/UBcacPA17fXxDhKFmVp8Mo+tJXSNQxyy/uSYDNs8vf8IhQCvZR5N1ibQ2XQZ3x3sfrDrZBVrDQjB0JuhDWukDgfFuWlwmFKv09V3o1/ndPPA71vX3GUNAp0x9lxqGE5U=,iv:tCgvAmrktlAllvHgPSmTewyQ4fJorDxmUBVqUKlId+0=,tag:kk+Qot643EC4A/uSF/ANpA==,type:str]
+    lastmodified: "2023-10-09T02:09:31Z"
+    mac: ENC[AES256_GCM,data:gXtdY7As73s1A3wUlwy+YcWJnU7iOawy5TKHODQ66DplKx0wg8+lBsXbJ9ecGoFNfFuBFHpxgfC8b73NJtF617vPjL1J3nJuKtvs+n6qij1UkzzwiE3ejN4lMy9bKqSy61CbBgh7Ah7lpEjqYOXF+DYE6R50Vdonvad74+lGh2k=,iv:nlZ13/yLSmZ7veFmaHBRq753uq+g8+mHGy9cNxdcpf8=,tag:KgrUfJKU8RSmxaUe+XbcBw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
