--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:7ZWIfV4Mvi8=,iv:k6wMXxu+ip/g6L8ReswoV5ZtzlOAnGF2913WmDXrJHQ=,tag:1bOmqzYQm0SX2sQXRvHBqA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:PcmeEStJ9ew=,iv:2oJ7aNBxbI2A9V4bLtLUeMeN1EaKxUDYeTYrbr/d09U=,tag:SopkoRaRpimlVeBY9mohRA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpUitiWjJROW5Eb0o1Zmpl
-            UTc1UjJtUjA2aGZUc3huTEU0Q2N4UXVvY3l3CjVPWVMvaitSbFBmSHVVeHhtK20r
-            STBSTURBS1VsVUlqSzNuVk9Zc0M1TUkKLS0tIDlwZVRmdzRsY1BYZEdkVDkxQnNI
-            M1laeFd3Z1RGYmk4VThJZDluSG5sNE0KE8aHUNvZxaZEtajKynnVSnwNwDuktXIc
-            KjdTHph/GInmpcXCPwHDZ+HRoIsFCaFYXviLak2r0VBhEMz48Z/b/w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwUitQYXRMZUxnSXRIbTdN
+            ZUV6WWJvbE5nM0JXTzdVcFhRMW1zNDlwRG1zCk5NY0ZQOXFoNFpHamorMG9BaStI
+            Nnpqc3VHWVVDeS83MTJlYlN4MWI2MEUKLS0tIGNkaGhDc3lKN3dHd3BXblY2anY3
+            RXdOVTZBU21tank0c0tMd3Z1bWFZb0EKIJ/v0BTx5+6Cwd/PJGbbCUx3G7Jb5UvX
+            xT584/hM0vN2pIsAe2A6hgdCCNwMMLy9aZawa+bimsXHATEFKTIlIQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:19:42Z"
-    mac: ENC[AES256_GCM,data:kRjN5u0XZLw6fUGnma5FR2Bg0s3bDpiY27PpCOlmL0G49dob0dYQN+GoA5hX0lyTRdKmhJM5xeLGa8r0Nx9wT6W2JpftLdfQEx297WhcZciAXDQSvVcXmlBzaLssxrbSkci6WW2ExUltxZ8JUoytGfN5mnMGje0kGcl0JQ6Lk10=,iv:3O5/jR4tH+Ix35UKjBdGc1RnTiJIX9L8jNMo1Rjj1eI=,tag:kfwxdqNnpEv/WGb2UlA0vQ==,type:str]
+    lastmodified: "2023-10-09T02:09:32Z"
+    mac: ENC[AES256_GCM,data:u/Coz7SRsObrB1rKlI8lwVvoCvrZBIIZ8z9zTgwUclxav7R1pVXYIEdSH4dYbbvB1ei6cXXusexR1QtQdL7XBVCCv8y5YcgW9+q4ljJ7r1bU9cj6IaMLPeIcUhqNonc1zs8YS9EIOKMyKvRplXfDJwre9V5zdxbuMNHFW+lLxUQ=,iv:q1l/02AVQXze0ZILBdaSYhT7FMEvZpVScFcBt6DAd+A=,tag:bCknY0bhnqNCWYFNH9q3/g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
