--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:7iKQuajS9lGPC15OJ0utf5Jktjwa/moiJ5ZuVEO+SaJ+uK+qAHa9Rj87WjwogwmNvNUjBUQ6oicSuodO,iv:IDz9AReexbUb14rL+BIrKUOAzOiN1+TJGo1TVPnadq4=,tag:OPsJF4kPvpIV1yQ5joYhjw==,type:str]
-    username: ENC[AES256_GCM,data:F+IAJzY=,iv:2eyDJ7UiabxYCfm4ZtU79rf6CLVzccFLAK/TQ1k97m0=,tag:+2nRit2gaNCM3+57WTDpdw==,type:str]
+    password: ENC[AES256_GCM,data:2BSW/3T3HDYg0JVzqx9VZhT+BksBTbJX8v82CTDtNK7FFAyxSD16ddc9RZwpMZ0sN7phU0KjpSl2Gm86,iv:14FjTTOjPvwtmB4TY83i8KkGBnDePYqdvH5lJbcWNRU=,tag:GhnTu9Jxxrwb0cl7E4kf5g==,type:str]
+    username: ENC[AES256_GCM,data:uVVBXRU=,iv:sxaivYypZS5m3FwOBBYGnoBt8q1ELhPNVSODw97S5PY=,tag:6LvJDK79JnhduVqPoJDnnQ==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1WWYwZDRRdnFtdDZhSkFM
-            cUJOdGpYUVFiVkJtTmxYTStZYmVWVHdTZHl3Ck5sUlZlZ3R1TVFQUU9Ib3JReWNP
-            ZE1VYnR3RmpNbFlmNFZ5YW1tYjNiWmMKLS0tIGNvb3k2eWZ2WU9IbzhQMXFSb1pZ
-            My9MN2g5NmZQUUNaUkI1MWd1WllmOG8KzYZh8vEmy2AnYcBkIupKcmbP7XGsoGWu
-            ZkGqXw5V1GCX2V2o8GaimyBW0bo9F7lqvBw1uC7z1p9Uc4hvd0IpQQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMHBZSzR5R09EbEJnaVdp
+            YUs1U2VKYnZKQ2FESGpFUjQvTWZJMU5JcEVnCjlYQU5zSGZTd0tPc0lhMlBRWHNU
+            eWlBY1lTdzZwbE4xN3dIUDErRjNMNFEKLS0tIHpEbmdBRFU2U2tqU3FHblNSNC9P
+            bE1rUUl2ZHlMdmNRd2VSYmdtQURSZVkKqxdeRUaqArpKq58+KpWhK44aQ0j7ej54
+            M+FohKsMW1aQlIpdU0q8mMrAx14K0C1l/VTIJ79+iUNAKhoriMpelw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:21:25Z"
-    mac: ENC[AES256_GCM,data:b+Waup2p0iP6uKVjT/HfKuM4Y1nW6xgpR+nFVduzhSl6VR+vMe8IBUUMzPaNVTj1svy303c5xkeZ0gXwdv06L4qTQBcq68r0ugPb57yVPdnWWSbhBSw77EaimMOtsGQB0zkQ9+Rgyiref+Cg9Fz35uO/kRN0Zd3RuhI8ymIuaBo=,iv:hFbQ48go3c1qAlgJtteQFEHCIfWg4ggbg7I9d1WbGAg=,tag:NuZawxj8PbG/etdgxH2dRQ==,type:str]
+    lastmodified: "2023-10-09T02:11:12Z"
+    mac: ENC[AES256_GCM,data:lk541G3AlIOozlYrTSI4FO4oGq9kBO1p0RgrpxsDgXXFOtHUAAIo+LsJUGtguTK5B0qnXT3yeRfx76AW18cNYuRcBqm+2yyBkioei7E5b4ICY2JxBITLfz+wkl3T7VayLYgIkccSZ74rjseKM7sBZNyCnLlUBZDlqCUF3q5rre0=,iv:F0Bfwz9pr93sWW6qK77uhNb94hFV9QcAFA4qJZE3PmI=,tag:JaAi7sQrHN0kj2N4L4Gvnw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
