--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:ZKXl2iGEiXI=,iv:OMljPtfx4G5KK/l0eNkCk2iM3M86IWJhjuO91urS0fc=,tag:tAfr7MyqTWQIaWuVlYQPvg==,type:str]
-    admin-user: ENC[AES256_GCM,data:0InGeos=,iv:wYklagThcU18fDnsonUZ2DRxXq4khc2NN06o0MdSHMU=,tag:pWve7lPL4trTXjjWKvx2Kg==,type:str]
+    admin-password: ENC[AES256_GCM,data:p9vu4lPLlBg=,iv:N52qFr/xzH54UXV0ZyAsIYpjjFqYvthotA9KhgpU4L8=,tag:N9fl/6+nTdufYFku8Ok/jQ==,type:str]
+    admin-user: ENC[AES256_GCM,data:DyrKyJo=,iv:6XhN5JETJOncrQ3FCxAbDUCQ+yNXP6rmYvfdykbk/Vw=,tag:6xESwbrclQXTZMSqQI3hdQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUE5FOW5VRlBaVGlhcmRu
-            bHZ2TDhWbGRLdngxU3VkcFhOSC8xREpsNWxBCnVzVGZwb1dvcDNoaG9vRFRLbFdt
-            SHl5b2toSWgzdzh4WkpBSCsvcGVzRmsKLS0tIHJ5dVVFTHNFb01Sa2VjVmk1R0RF
-            ZmYyR2h2bjZVZ3o4aXNzbmxTeEtDTGsKlaRo7WcNDD0b8kCLT7IDS3BqeUXJkMUw
-            OveA2OJar5BStFblp1mp7j51nASVxzTGik6N3OrF7lXzso4aJHqFeA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWS01CZ0tMMVlLenF5VHZK
+            YXBDdW9Gc2NsL1gveTI4SkpFV0NyU002eWpBCk9ucSs2Z293WGtiSWZ3aGRxNlZK
+            SkdVY1VLVGhSU3d6VEhXcDNkRStvOGMKLS0tIHNJaTNUSndyZ2c2ODZlWjlMandF
+            L3Zuc0RlSEI1UE1XdmZKbnNKaDI4aFEK84jS83NIj0xdm+QYDtOl9VZeDIocohiI
+            +Kgev9P5VAsKeHJxCFuRyosynAJGmBpc4LotgBxKTYIC0kwx0Fn6GA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:21:11Z"
-    mac: ENC[AES256_GCM,data:TW/lVxAP/S7s8oKd/TJNpM9mmeubeSV/Qssr6RKoj2DZ6NeTkWJWzf2x5xEziiT/2kSQpagJ/01Wdx4nqJU1ZuTCUorgWWTXGXttW8uAiDbFwAy3xdJ5aiwcyD717OMNNp+qALgMF6ajysmRUQlaaxGhZHz3is7mTTnqOIN89GY=,iv:2DBOx7WFxEBwRrjokxqt+E0LIvdz8+jVNhn2PoewBcU=,tag:8YXIn4CTuOTZ54fChRa+dg==,type:str]
+    lastmodified: "2023-10-09T02:10:58Z"
+    mac: ENC[AES256_GCM,data:nTKaO8st/dxuAQRzy3Dg7fJ6Z7rOJQAWjUSW8K7fRLVRCxUeeEvtdSoZAnOvtuSTB0kQlJhS4lKKUzrY9ztvkNI3te6oapl9rTCm7gQOXn3wjy45ao8G7C+Zoezm71d3NUnducj9vYI3+INa7rkFL7AYI3cdvsoNGZGnwG6mLW8=,iv:Q+ZBpHDfsi3zHoKhgTqts2cVAl7R15yjS99YPlBuXek=,tag:PvPAc5twqGqod5k3v8p1YA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
