--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:QjMQfY6tRSEWbaNC4Y+h3A==,iv:MParCy1Zl5a0EOZqfXVHDsjJlITpMcBRwUCBiBKjxUo=,tag:05chKUA0bjApb2BUTKK8NA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:5JHbwG26p8pjPZKFFPWx3QMx5KTf8wARm4W+A76Ie9BMo2sR,iv:r0gV1VCszTBJqn6g+bC26ljM6qFmQXEBIYWWuevj65E=,tag:OdWzuuNzU60MuTpz+3osiQ==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:k9pnIvQC2gWA1MI=,iv:BksPuEjQCeTKUIU88P8GKm6jFy/gtAIenZ4czgQugEg=,tag:eDh0+4BVm0YUT/RJ/bZjLg==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:rcCocxQj7ZVDprBfyPF+FQ==,iv:RGVUn/2xN0JDoilYk4lwaMRd6f1m5nLSXX7oeSaiWiI=,tag:zEk418EIQACUAF7yyrbyRA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ZukxZZh+Qd4sz27qdpNMs+JP6XMC/76VMPEdwbo9IlcoJ3n2,iv:yOvzxkVsywMfKVXlitqmEtZfJpLVaHrT/rAjONN41GY=,tag:vfrMLY6P0/I5di1bWlFjGg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:4nXzM+FPvQN+oRE=,iv:Ej7CWvLSpWBdoAn47fVyZrnw/e1dXyny2VJ077lYsQ0=,tag:SBkSPvhbZK5LD4qzac8hlw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwaEh6aTFsdTZmMzVHd2Ja
-            d2R4d0xuNU14U2lrUzgyNUlSbzZGMGRVSEU0Cko3SldPb21QVStFWmtjbzRwTllR
-            eGoyUldWWlFsR2w3SmlTT3VCWFZkUFkKLS0tIFpYS0VRQzN5UzIvSDJsaGdOdnR3
-            cUdYUjExdzBTdCtzSW5pUWZXZVNDWlkKLpE4UxZ8S2hYYOKcJBl7cIBxiw13DIHl
-            Fwp+Vn1Qi89XsilJy7NWqN3jk90UYVffdFEwVuFHejwo33N+yRqOkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQN2tmN0RXVjlXMmpmRDdq
+            V2o1dUxkUVlxQUVxMHJpQzV6aVdMUTVKeWo4CncyVEdhTVdvQ0tmQnpnNXpnK3Zj
+            QUJ2YzMvRFlnb1RTRFo3L2dvbkc2U0kKLS0tIDk1U0ExRStBQVBTOCtNVTB5LzZ1
+            dUZScDkzOVpIdXArTHU2NHBsUjZSczQKFDatEjCtzJGabVCOXvPD3ZskINdchmgc
+            os32A6jceZH+Ij3goVrGzwOEMYaauoUpvzsb95ron7o5iV/bhRpgzg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:21:04Z"
-    mac: ENC[AES256_GCM,data:JaNJA6QgOxA6bjJObltJHl+6orF9kuq8PB7dSum5v+Tfxyj6V7eFSK7+pebTw5x43GWYw16J1wqDrIVHv1CGWgOoEy4uDfN/YE0iDnEVoxqxLP9OgL2TLaym1xAPVAXW/qdyIyWhLrv4X/PXcm1ikXS+K6o4orxXhAJKXKWOpVM=,iv:XaCW3wB0beUzjU2aQtihPloD8j3+rLptCH7f3Ig4mr4=,tag:+KXG5iiyVjhT7MES2ll9EQ==,type:str]
+    lastmodified: "2023-10-09T02:10:52Z"
+    mac: ENC[AES256_GCM,data:iIp1tdndLPowr9KJB4bQ8N99TXISjwH8/wOVb69rlPyoNbxMb5/b2L6kUNdTMe9pQRKt4RjW5Z4IYDSwKxQoOJix00U7dfKwhxlbqROdpzqe4kdTZktp6SetCuFspYRgwZlLjTG+o/TD2m9TLW3OpcHiuf1kQo/CVAYav3gmeiU=,iv:B9qIUKaTLuly6gd/QOJ1QNwX6Fos/RiZnUV6EubAvTk=,tag:zVWYR5/IbRfBox5R8CtbNw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
