--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:KhOYLC1Tgijokrxk,iv:fHAUTLN4BKcld08GUls5/Jvrrphtz+Is21q8XV63Qcw=,tag:4LWgFP+G7t+V+9PoD7R/BQ==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:6rPgAc16GByf54O9,iv:BRhHYBbZUITzy8C9ku6Tw0DEMu8ggs3ZNHY9orGU8AY=,tag:CDkEIShxM/eE2+cn2mwz4w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxWVk3dnpENC8rVHdQaVBV
-            R2dHUndVMnAyeEFzVmpQSEkzTHdXY1VOVGlRCkdOYzhQc2g2K204UE5jRWd4ci9i
-            YmdDYWIxQks3V1hwYnFQWTFoYW9FaTQKLS0tIFZFS0l3M0VsQU15WDhuRlR6aElp
-            dk5GaW5ydWdmSVdsSVArUzR6M1Y1TXMK8OMWpQLp6udVfrnV630YPezZyiPT4KER
-            YiLmETtn3pCFbR6xYPpfBf8FinYpyCZUtLvPRYg5CoqAadmC2h4S9A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWNmM5WTZnSjlyUyt2L0R5
+            eVhwT3g0eUV4R0pkUDNSS2ZIRWFqZDBLWVhNCkRMS0g1Y0hXM3o0YzhZeTJGV0ZR
+            N01sOVUwbm52ZWxBMXZjSHBzL291MXMKLS0tIFJVa1g0WUt0MXNLY1FwUzR2ZWlI
+            Qk1RZmNTLy9NbmFNbUNDWWI1Z3IvZ0UKm1bmNamX153KT9GvH6AJqTucDGlpC3sQ
+            Tt7aGJCiERc3/CBpqKSB77BX4+IVBZL0bI1AP8qhWUubkl1hFEAtmg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T01:21:04Z"
-    mac: ENC[AES256_GCM,data:YeCYRdmrW4Ad7AvT/lCDRpARHnm/W+RRdMvWewrZr1TvE1pBSrhlHo/Nn2RThsq+eaVRTtHgBpsFPJvJ8HIzE969LUizw7UYFFXVLRgtYfiWGxs9o5yFyJjChIFaSPmksgm9VvQPK6vXAm8r6c1Y7TZAWaJdubKWCGY1ZRM9K6w=,iv:ALz6fS4n7/h41KfwDpYWCLzrO7uMB60CtgC2wAiVy/Q=,tag:5mUUSCG9FqRtMTw621cfXA==,type:str]
+    lastmodified: "2023-10-09T02:10:52Z"
+    mac: ENC[AES256_GCM,data:IviNBcxaKlEFEwQTCN/RyDcblkZIiAEZJYZEL+dFpOZSGK9+tSzgr9OllzyPxW1bgknFxXcR62lMlCBLbEexExUjJFVUxNHnqay4e+Ygqxb9GXdJ9C7ME1SneCopyL/Jafn9M1aK1tInMk2VBVZ2CuHemr+9rTe1DPpbmBegpWk=,iv:5UG8/PcKWEGU4DfkTRebAb5LZ56LHcikUxwXDBGEXQw=,tag:zS7zeqkOK2r7QGprR34JCg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
